--- a/arch/arm/dts/laguna-global-ctrl.dtsi
+++ b/arch/arm/dts/laguna-global-ctrl.dtsi
@@ -14,6 +14,26 @@
 		u-boot,dm-spl;
 		ranges;
 
+		safety_glb: safety-glb@00601000 {
+			compatible = "syscon", "simple-mfd";
+			reg = <0x00 0x00601000 0x00 0x1000>;
+			#address-cells = <1>;
+			#size-cells = <1>;
+			u-boot,dm-pre-reloc;
+			u-boot,dm-spl;
+
+			safety_uart_xfer_sel: safety-uart-xfer-sel {
+				compatible = "axera,laguna-sysctl";
+				#syscon-cells = <2>;
+				regmap = <&safety_glb>;
+				offset = <0x48>;
+				mask = <0x3>;
+				field-width = <2>;
+				u-boot,dm-pre-reloc;
+				u-boot,dm-spl;
+			};
+		};
+
 		common_glb: common-glb@06100000 {
 			compatible = "syscon", "simple-mfd";
 			reg = <0x00 0x06100000 0x00 0x1000>;
