--- a/configs/lua-fpga_defconfig
+++ b/configs/lua-fpga_defconfig
@@ -26,6 +26,7 @@ CONFIG_LUA_GICV2_LOWLEVEL_INIT=y
 CONFIG_LUA_GTMR_LOWLEVEL_INIT=y
 CONFIG_LUA_GTMR_CNT_OFFSET=0x1D4
 CONFIG_LUA_PERIPH_CRU=y
+CONFIG_LUA_SAFETY_INIT=y
 CONFIG_LUA_NOR0=y
 CONFIG_LUA_MTDPARTS_NOR0="4m(uboot)"
 CONFIG_SYS_LOAD_ADDR=0x101000000
