--- a/configs/lua-fpga_defconfig
+++ b/configs/lua-fpga_defconfig
@@ -29,7 +29,7 @@ CONFIG_LUA_PERIPH_CRU=y
 CONFIG_LUA_SAFETY_INIT=y
 CONFIG_LUA_NOR0=y
 CONFIG_LUA_MTDPARTS_NOR0="4m(uboot)"
-CONFIG_SYS_LOAD_ADDR=0x101000000
+CONFIG_SYS_LOAD_ADDR=0x102000000
 CONFIG_BUILD_TARGET="u-boot.itb"
 CONFIG_DEBUG_UART=y
 CONFIG_ENV_VARS_UBOOT_CONFIG=y
@@ -37,7 +37,6 @@ CONFIG_FIT=y
 CONFIG_SPL_FIT_PRINT=y
 CONFIG_SPL_LOAD_FIT=y
 CONFIG_SPL_LOAD_FIT_ADDRESS=0x100200000
-CONFIG_SPL_LOAD_FIT_FULL=y
 CONFIG_SPL_FIT_SOURCE="arch/arm/mach-axera/laguna/spl-fit.its"
 # CONFIG_USE_SPL_FIT_GENERATOR is not set
 # CONFIG_BOOTSTD is not set
@@ -61,12 +60,15 @@ CONFIG_SPL_SIZE_LIMIT_SUBTRACT_MALLOC=y
 CONFIG_SPL_MAX_SIZE=0x1FE000
 CONFIG_SPL_PAD_TO=0x0
 CONFIG_SPL_HAS_BSS_LINKER_SECTION=y
-CONFIG_SPL_BSS_START_ADDR=0x141BE000
+CONFIG_SPL_BSS_START_ADDR=0x141C0000
 CONFIG_SPL_BSS_MAX_SIZE=0x2000
 CONFIG_SPL_SYS_REPORT_STACK_F_USAGE=y
 CONFIG_SPL_SHOW_ERRORS=y
+CONFIG_SPL_SOC_INIT=y
 CONFIG_SPL_BOARD_INIT=y
-CONFIG_SPL_SYS_MALLOC_SIMPLE=y
+CONFIG_SYS_SPL_MALLOC=y
+CONFIG_HAS_CUSTOM_SPL_MALLOC_START=y
+CONFIG_CUSTOM_SYS_SPL_MALLOC_ADDR=0x101000000
 CONFIG_SPL_DISPLAY_PRINT=y
 CONFIG_SPL_MD5=y
 CONFIG_SPL_RAM_SUPPORT=y
@@ -221,6 +223,7 @@ CONFIG_VIRTIO_PCI=y
 CONFIG_VIRTIO_NET=y
 CONFIG_VIRTIO_BLK=y
 CONFIG_CC_OPTIMIZE_LIBS_FOR_SPEED=y
+# CONFIG_SPL_USE_TINY_PRINTF is not set
 CONFIG_SPL_TINY_MEMSET=y
 CONFIG_LIBAVB=y
 CONFIG_SHA384=y
@@ -230,3 +233,9 @@ CONFIG_GETOPT=y
 CONFIG_FDT_FIXUP_PARTITIONS=y
 # CONFIG_EFI_LOADER is not set
 CONFIG_UNIT_TEST=y
+CONFIG_SPL_UNIT_TEST=y
+# CONFIG_UT_LIB_ASN1 is not set
+# CONFIG_UT_LOG is not set
+# CONFIG_UT_UNICODE is not set
+# CONFIG_UT_ENV is not set
+# CONFIG_UT_OVERLAY is not set
