arm: lua-virt: Enable unit test options

--- a/configs/lua-qemu-virt_defconfig
+++ b/configs/lua-qemu-virt_defconfig
@@ -269,3 +269,10 @@ CONFIG_SPL_HEXDUMP=y
 CONFIG_GETOPT=y
 CONFIG_FDT_FIXUP_PARTITIONS=y
 # CONFIG_EFI_LOADER is not set
+CONFIG_UNIT_TEST=y
+CONFIG_SPL_UNIT_TEST=y
+# CONFIG_UT_LIB_ASN1 is not set
+# CONFIG_UT_LOG is not set
+# CONFIG_UT_UNICODE is not set
+# CONFIG_UT_ENV is not set
+# CONFIG_UT_OVERLAY is not set
