--- a/arch/arm/mach-axera/laguna/Kconfig
+++ b/arch/arm/mach-axera/laguna/Kconfig
@@ -134,17 +134,17 @@ config LUA_GTMR_LOWLEVEL_INIT
 	  This option enables GTMR_CNT.
 
 config LUA_MAIN_SEC_GLB_BASE
-	hex "Main Domain sec_glb_0 Base"
+	hex "Main Domain Secure Global Base (sec_glb)"
 	depends on LUA_GTMR_LOWLEVEL_INIT
 	default 0x18000000
 
 config LUA_GTMR_CNT_OFFSET
-	hex "GTMR_CNT Control Offset"
+	hex "GTMR_CNT Control Offset from sec_glb"
 	depends on LUA_GTMR_LOWLEVEL_INIT
-	default 0x1C8
+	default 0x1D4
 
-config LUA_CPU_GTMR_BASE
-	hex "Generic Timer Counter Base"
+config LUA_CPU_GTMR_CNT_BASE
+	hex "Generic Timer System Counter Control Base"
 	depends on LUA_GTMR_LOWLEVEL_INIT
 	default 0x08012000
 
@@ -174,6 +174,11 @@ config LUA_SAFETY_INIT
 	help
 	  This option enables initialization of safety domain peripherals,
 	  like UART, Ethernet...
+
+config LUA_DSU_PMU_INIT
+	bool "Enable DSU PMU Register Access"
+	help
+	  This option enable DSU PMU registers write-accessible from EL1 non-secure.
 
 endmenu
 
