arm64: laguna: Add u-boot,dm-spl property for soc node

--- a/arch/arm/dts/laguna-fpga.dts
+++ b/arch/arm/dts/laguna-fpga.dts
@@ -56,6 +56,8 @@
 		compatible = "simple-bus";
 		#address-cells = <2>;
 		#size-cells = <2>;
+		u-boot,dm-pre-reloc;
+		u-boot,dm-spl;
 		ranges;
 
 		serial0: uart@00602000 {
