--- a/arch/arm/dts/laguna-qemu-virt.dts
+++ b/arch/arm/dts/laguna-qemu-virt.dts
@@ -12,6 +12,7 @@
 
 #include "laguna-gpios.dtsi"
 #include "laguna-global-ctrl.dtsi"
+#include "laguna-clocks.dtsi"
 #include "laguna-cru.dtsi"
 / {
 	model = "Laguna Qemu Virtual Platform";
@@ -86,6 +87,8 @@
 			reset-names = "prst", "rst";
 			syscons = <&uart_xfer_sel 0 UART_XFER_RS232_2LINE>;
 			syscon-names = "xfersel";
+			clocks = <&clk_periph_uart1>, <&pclk_periph_uart1>;
+			clock-names = "clk_periph_uart1", "pclk_periph_uart1";
 			u-boot,dm-pre-reloc;
 			u-boot,dm-spl;
 			status = "okay";
@@ -103,6 +106,8 @@
 			reset-names = "prst", "rst";
 			syscons = <&uart_xfer_sel 2 UART_XFER_RS232_2LINE>;
 			syscon-names = "xfersel";
+			clocks = <&clk_periph_uart2>, <&pclk_periph_uart2>;
+			clock-names = "clk_periph_uart2", "pclk_periph_uart2";
 			u-boot,dm-pre-reloc;
 			u-boot,dm-spl;
 			status = "okay";
@@ -120,6 +125,8 @@
 			reset-names = "prst", "rst";
 			syscons = <&uart_xfer_sel 4 UART_XFER_RS232_2LINE>;
 			syscon-names = "xfersel";
+			clocks = <&clk_periph_uart3>, <&pclk_periph_uart3>;
+			clock-names = "clk_periph_uart3", "pclk_periph_uart3";
 			u-boot,dm-pre-reloc;
 			u-boot,dm-spl;
 			status = "okay";
@@ -137,6 +144,8 @@
 			reset-names = "prst", "rst";
 			syscons = <&uart_xfer_sel 6 UART_XFER_RS232_2LINE>;
 			syscon-names = "xfersel";
+			clocks = <&clk_periph_uart4>, <&pclk_periph_uart4>;
+			clock-names = "clk_periph_uart4", "pclk_periph_uart4";
 			u-boot,dm-pre-reloc;
 			u-boot,dm-spl;
 			status = "okay";
@@ -154,6 +163,8 @@
 			reset-names = "prst", "rst";
 			syscons = <&uart_xfer_sel 8 UART_XFER_RS232_2LINE>;
 			syscon-names = "xfersel";
+			clocks = <&clk_periph_uart5>, <&pclk_periph_uart5>;
+			clock-names = "clk_periph_uart5", "pclk_periph_uart5";
 			u-boot,dm-pre-reloc;
 			u-boot,dm-spl;
 			status = "okay";
