arm: lua-fpga: Enable clock driver options

--- a/configs/lua-fpga_defconfig
+++ b/configs/lua-fpga_defconfig
@@ -151,6 +151,7 @@ CONFIG_MMC_SPEED_MODE_SET=y
 CONFIG_PARTITION_TYPE_GUID=y
 CONFIG_SPL_OF_CONTROL=y
 CONFIG_OF_BOARD=y
+CONFIG_OF_SPL_REMOVE_PROPS="pinctrl-0 pinctrl-names clocks clock-names interrupt-parent interrupts"
 CONFIG_NET_RETRY_COUNT=20
 CONFIG_NET_RANDOM_ETHADDR=y
 CONFIG_KEEP_SERVERADDR=y
@@ -165,6 +166,11 @@ CONFIG_SPL_SYSCON=y
 CONFIG_SIMPLE_BUS_CORRECT_RANGE=y
 CONFIG_BOOTCOUNT_LIMIT=y
 CONFIG_DM_BOOTCOUNT=y
+CONFIG_CLK=y
+CONFIG_SPL_CLK=y
+CONFIG_SPL_CLK_CCF=y
+CONFIG_CLK_CCF=y
+CONFIG_CLK_AXERA=y
 CONFIG_UDP_FUNCTION_FASTBOOT=y
 CONFIG_FASTBOOT_BUF_ADDR=0x3090000000
 CONFIG_FASTBOOT_BUF_SIZE=0x10000000
@@ -231,6 +237,7 @@ CONFIG_HEXDUMP=y
 CONFIG_SPL_HEXDUMP=y
 CONFIG_GETOPT=y
 CONFIG_FDT_FIXUP_PARTITIONS=y
+CONFIG_SYMBOL_LOOKUP=y
 # CONFIG_EFI_LOADER is not set
 CONFIG_UNIT_TEST=y
 CONFIG_SPL_UNIT_TEST=y
