--- a/arch/arm/dts/laguna-fpga.dts
+++ b/arch/arm/dts/laguna-fpga.dts
@@ -172,6 +172,12 @@
 			phy-mode = "gmii";
 			resets = <&periph_sysrst1 LAGUNA_PERI_EMAC_ARST>;
 			reset-names = "arst";
+			clocks = <&aclk_main_emac>, <&clk_periph_emac_ptp>,
+					 <&clk_main_ephy_ref>, <&clk_main_rmii_phy>,
+					 <&clk_main_rgmii_tx>;
+			clock-names = "aclk_eqos", "ptp_ref",
+						  "ephy_ref", "rmii_phy",
+						  "rgmii_tx";
 			axera,syscon-eth0 = <&periph_glb 0x24>;
 			axera,syscon-pps = <&periph_glb 0x68>;
 
