arm: lua-fpga: Enable console UART select and RAS options

--- a/configs/lua-fpga_defconfig
+++ b/configs/lua-fpga_defconfig
@@ -14,7 +14,6 @@ CONFIG_SPL_SERIAL=y
 CONFIG_BOOTCOUNT_BOOTLIMIT=3
 CONFIG_SPL_SIZE_LIMIT=0x200000
 CONFIG_SPL_SIZE_LIMIT_PROVIDE_STACK=0x10000
-CONFIG_DEBUG_UART_BASE=0x0E403000
 CONFIG_DEBUG_UART_CLOCK=10000000
 CONFIG_DEBUG_UART_BOARD_INIT=y
 CONFIG_SPL_FS_FAT=y
@@ -25,10 +24,12 @@ CONFIG_TARGET_LUA_FPGA=y
 CONFIG_LUA_GICV2_LOWLEVEL_INIT=y
 CONFIG_LUA_GTMR_LOWLEVEL_INIT=y
 CONFIG_LUA_PERIPH_CRU=y
-CONFIG_LUA_SAFETY_INIT=y
 CONFIG_LUA_DSU_PMU_INIT=y
+CONFIG_LUA_RAS_INIT=y
 CONFIG_LUA_NOR0=y
 CONFIG_LUA_MTDPARTS_NOR0="4m(uboot)"
+CONFIG_LUA_SELECT_UART_FOR_CONSOLE=y
+CONFIG_LUA_SAFETY_UART0=y
 CONFIG_SYS_LOAD_ADDR=0x102000000
 CONFIG_BUILD_TARGET="u-boot.itb"
 CONFIG_DEBUG_UART=y
