--- a/configs/lua-fpga_defconfig
+++ b/configs/lua-fpga_defconfig
@@ -7,6 +7,7 @@ CONFIG_ARCH_AXERA=y
 CONFIG_SYS_TEXT_BASE=0x100200000
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
+CONFIG_DM_GPIO=y
 CONFIG_DEFAULT_DEVICE_TREE="laguna-fpga"
 CONFIG_SPL_TEXT_BASE=0x14001000
 CONFIG_SYS_PROMPT="LUA$ "
@@ -24,6 +25,7 @@ CONFIG_TARGET_LUA_FPGA=y
 CONFIG_LUA_GICV2_LOWLEVEL_INIT=y
 CONFIG_LUA_GTMR_LOWLEVEL_INIT=y
 CONFIG_LUA_PERIPH_CRU=y
+CONFIG_LUA_SAFETY_INIT=y
 CONFIG_LUA_DSU_PMU_INIT=y
 CONFIG_LUA_RAS_INIT=y
 CONFIG_LUA_NOR0=y
