drivers: soc: rename SOC_LUA to SOC_LAGUNA

--- a/configs/lua-fpga_defconfig
+++ b/configs/lua-fpga_defconfig
@@ -31,7 +31,6 @@ CONFIG_LUA_RAS_INIT=y
 CONFIG_LUA_NOR0=y
 CONFIG_LUA_MTDPARTS_NOR0="4m(uboot)"
 CONFIG_LUA_SELECT_UART_FOR_CONSOLE=y
-CONFIG_LUA_SAFETY_UART0=y
 CONFIG_SYS_LOAD_ADDR=0x102000000
 CONFIG_BUILD_TARGET="u-boot.itb"
 CONFIG_DEBUG_UART=y
@@ -221,7 +220,7 @@ CONFIG_SERIAL_PROBE_ALL=y
 CONFIG_DEBUG_UART_SHIFT=2
 CONFIG_SYS_NS16550=y
 CONFIG_DW_UART_INIT=y
-CONFIG_SOC_LUA=y
+CONFIG_SOC_LAGUNA=y
 CONFIG_DM_GLBCON=y
 CONFIG_SPI=y
 CONFIG_DM_SPI=y
