--- a/configs/lua-qemu-virt_defconfig
+++ b/configs/lua-qemu-virt_defconfig
@@ -10,6 +10,7 @@ CONFIG_SYS_TEXT_BASE=0x100200000
 CONFIG_SPL_GPIO=y
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
+CONFIG_DM_GPIO=y
 CONFIG_SPL_DM_SPI=y
 CONFIG_DEFAULT_DEVICE_TREE="laguna-qemu-virt"
 CONFIG_SPL_TEXT_BASE=0x14000000
@@ -242,7 +243,7 @@ CONFIG_SERIAL_SEARCH_ALL=y
 CONFIG_SERIAL_PROBE_ALL=y
 CONFIG_DEBUG_UART_SHIFT=2
 CONFIG_SYS_NS16550=y
-CONFIG_SOC_LUA=y
+CONFIG_SOC_LAGUNA=y
 CONFIG_DM_GLBCON=y
 CONFIG_SPI=y
 CONFIG_DM_SPI=y
